--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <h1>LOOK OUT !</h1>
+  <h2>Biggie's website is under construction</h2>
+  <img src= assets/img/20200620_biggie.jpg alt="Biggie & Flower">
 </body>
 </html>
