adding random dog pic

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <h1>LOOK OUT !</h1>
   <h2>Biggie's website is under construction</h2>
   <img src= assets/img/20200620_biggie.jpg alt="Biggie & Flower">
+
+
+  <div id="image-container"></div>
+  <script src="index.js"></script>
+
 </body>
 </html>
