Updating Biggie with New CSS

--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Biggie The Boston</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>LOOK OUT !</h1>
-  <h2>Biggie's website is under construction</h2>
-  <img src= assets/img/20200620_biggie.jpg alt="Biggie & Flower">
+  <header id="header"><h1>LOOK UP !</h1> <h2>Biggie's website is under construction</h2> </header>
+  <section id="portfolio">
+    <img src=assets\img\20200620Big.jpg alt="Biggie & Flower">
+    <div id="image-container"></div>
+  </section>
+  <section id="about">
+    <p>All about Biggie</p>
+  </section>
+  <section id="contact">
+    <p>How to contact biggie</p>
+  </section>
+  <footer id="footer">Footer</footer>
 
 
-  <div id="image-container"></div>
+
+  
+  
+  
+  
+
+
+  
   <script src="index.js"></script>
 
 </body>
